--- a/EasyMoney/app/src/main/res/layout/activity_add_expense.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_add_expense.xml
@@ -73,7 +73,7 @@
         android:background="@drawable/style_btn_blue"
         android:enabled="true"
         android:text="@string/btn_add_expense"
-        app:layout_constraintBottom_toTopOf="@+id/reportTrackerFoot"
+        app:layout_constraintBottom_toTopOf="@+id/reportBexTrackerFoot"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
@@ -148,7 +148,7 @@
         app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
     <!--Footer Buttons -->
     <Button
-        android:id="@+id/userTrackerFoot"
+        android:id="@+id/bigExUsTrackerFoot"
         android:layout_width="108dp"
         android:layout_height="64dp"
         android:backgroundTint="#FFFFFF"
@@ -156,21 +156,21 @@
         app:iconGravity="top"
         app:iconTint="#676767"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/bETrackerFoot" />
+        app:layout_constraintStart_toEndOf="@+id/bEBexTrackerFoot" />
 
     <Button
-        android:id="@+id/bETrackerFoot"
+        android:id="@+id/bEBexTrackerFoot"
         android:layout_width="102dp"
         android:layout_height="64dp"
         android:backgroundTint="#FFFFFF"
         app:icon="@drawable/ic_bigexpenseinactive"
         app:iconGravity="top"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/reportTrackerFoot"
+        app:layout_constraintStart_toEndOf="@+id/reportBexTrackerFoot"
         app:iconTint="#676767" />
 
     <Button
-        android:id="@+id/reportTrackerFoot"
+        android:id="@+id/reportBexTrackerFoot"
         android:layout_width="102dp"
         android:layout_height="64dp"
         android:backgroundTint="#FFFFFF"
@@ -179,10 +179,10 @@
         app:iconGravity="top"
         app:iconTint="#676767"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/trackerTrackerFoot" />
+        app:layout_constraintStart_toEndOf="@+id/trackerBigExTrackerFoot" />
 
     <Button
-        android:id="@+id/trackerTrackerFoot"
+        android:id="@+id/trackerBigExTrackerFoot"
         android:layout_width="102dp"
         android:layout_height="64dp"
         android:backgroundTint="#FFFFFF"
