--- a/EasyMoney/app/src/main/res/layout/activity_add_savings.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_add_savings.xml
@@ -32,7 +32,7 @@
 
 
     <!--back button-->
-    <ImageView
+    <Button
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
