--- a/EasyMoney/app/src/main/res/layout/bigex_loan_listview_layout.xml
+++ b/EasyMoney/app/src/main/res/layout/bigex_loan_listview_layout.xml
@@ -10,11 +10,11 @@
         android:contentDescription="@string/image" />
 
     <TextView
+        android:id="@+id/txtTravel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textColor="#00FF00"
-        android:id="@+id/txtTravel"/>
+        android:textColor="@color/black"
+        android:textSize="20sp" />
 
 
 
