--- a/EasyMoney/app/src/main/res/layout/activity_big_expense_setup.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_big_expense_setup.xml
@@ -67,6 +67,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="@string/txtScrNameBE"
+        android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -80,7 +81,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="@string/txtScrBESub"
-        android:textSize="10dp"
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
 
