--- a/EasyMoney/app/src/main/res/layout/activity_expense_tracker.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_expense_tracker.xml
@@ -369,7 +369,7 @@
             app:layout_constraintTop_toBottomOf="@+id/trackerExpensePrice3" />
 
         <TextView
-            android:id="@+id/trackerExpenseName4"
+            android:id="@+id/txtCutSavings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="36dp"
