--- a/EasyMoney/app/src/main/res/layout/activity_monthly_report.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_monthly_report.xml
@@ -338,11 +338,11 @@
             android:layout_marginTop="23dp"
             android:layout_marginEnd="43dp"
             app:layout_constraintEnd_toStartOf="@+id/trackerExpenseDate4"
-            app:layout_constraintStart_toEndOf="@+id/trackerExpenseName4"
+            app:layout_constraintStart_toEndOf="@+id/txtCutSavings"
             app:layout_constraintTop_toBottomOf="@+id/trackerExpensePrice3" />
 
         <TextView
-            android:id="@+id/trackerExpenseName4"
+            android:id="@+id/txtCutSavings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="22dp"
