--- a/EasyMoney/app/src/main/res/layout/activity_add_expense.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_add_expense.xml
@@ -51,7 +51,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="182dp"
-        app:layout_constraintTop_toBottomOf="@+id/expenseName">
+        app:layout_constraintTop_toBottomOf="@+id/expenseName"
+        app:prefixText="@string/prefix">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputAmount"
